--- a/hw.html
+++ b/hw.html
@@ -96,10 +96,6 @@
   <a>Click Here</a>
   <a>Click <span data-customAttr="500">Here3</span></a>
   <a>Click Here</a>
-      
-  <script type="text/javascript">
-    //TODO: Javascript homework
-  </script>
-  
+<script src="hw.js"></script>
 </body>
 </html>
